Modernize styles, modified js function again

--- a/project/css/style.sass
+++ b/project/css/style.sass
@@ -51,6 +51,15 @@ button
   align-items: center
   justify-content: space-between
 
+  img
+    border-radius: 10px 10px
+    &:hover
+      box-shadow: 0 0 5px aqua
+
+  &:hover h3,
+  &:hover p
+    text-shadow: 0 0 5px aqua
+
 
 .footer
   display: flex
